@@ -301,8 +301,8 @@ public:
 
   static void setupTableDates (Table & view)
   {
-    view.add (STRING_CMD_HISTORY_YEAR);
-    view.add (STRING_CMD_HISTORY_MONTH);
+    view.add (STRING_CMD_HISTORY_YEAR,  false);
+    view.add (STRING_CMD_HISTORY_MONTH, false);
   }
 
   static void insertRowDate (
@@ -404,8 +404,8 @@ public:
 
   static void setupTableDates (Table & view)
   {
-    view.add (STRING_CMD_HISTORY_YEAR);
-    view.add (STRING_CMD_HISTORY_MONTH);
+    view.add (STRING_CMD_HISTORY_YEAR,  false);
+    view.add (STRING_CMD_HISTORY_MONTH, false);
   }
 
   static void insertRowDate (
@@ -448,7 +448,7 @@ public:
 
   static void setupTableDates (Table & view)
   {
-    view.add (STRING_CMD_HISTORY_YEAR);
+    view.add (STRING_CMD_HISTORY_YEAR, false);
   }
 
   static void insertRowDate (
@@ -489,7 +489,7 @@ public:
 
   static void setupTableDates (Table & view)
   {
-    view.add (STRING_CMD_HISTORY_YEAR);
+    view.add (STRING_CMD_HISTORY_YEAR, false);
   }
 
   static void insertRowDate (
@@ -531,9 +531,9 @@ public:
 
   static void setupTableDates (Table & view)
   {
-    view.add (STRING_CMD_HISTORY_YEAR);
-    view.add (STRING_CMD_HISTORY_MONTH);
-    view.add (STRING_CMD_HISTORY_DAY);
+    view.add (STRING_CMD_HISTORY_YEAR,  false);
+    view.add (STRING_CMD_HISTORY_MONTH, false);
+    view.add (STRING_CMD_HISTORY_DAY,   false);
   }
 
   static void insertRowDate (
@@ -581,9 +581,9 @@ public:
 
   static void setupTableDates (Table & view)
   {
-    view.add (STRING_CMD_HISTORY_YEAR);
-    view.add (STRING_CMD_HISTORY_MONTH);
-    view.add (STRING_CMD_HISTORY_DAY);
+    view.add (STRING_CMD_HISTORY_YEAR,  false);
+    view.add (STRING_CMD_HISTORY_MONTH, false);
+    view.add (STRING_CMD_HISTORY_DAY,   false);
   }
 
   static void insertRowDate (
@@ -631,9 +631,9 @@ public:
 
   static void setupTableDates (Table & view)
   {
-    view.add (STRING_CMD_HISTORY_YEAR);
-    view.add (STRING_CMD_HISTORY_MONTH);
-    view.add (STRING_CMD_HISTORY_DAY);
+    view.add (STRING_CMD_HISTORY_YEAR,  false);
+    view.add (STRING_CMD_HISTORY_MONTH, false);
+    view.add (STRING_CMD_HISTORY_DAY,   false);
   }
 
   static void insertRowDate (
@@ -681,9 +681,9 @@ public:
 
   static void setupTableDates (Table & view)
   {
-    view.add (STRING_CMD_HISTORY_YEAR);
-    view.add (STRING_CMD_HISTORY_MONTH);
-    view.add (STRING_CMD_HISTORY_DAY);
+    view.add (STRING_CMD_HISTORY_YEAR,  false);
+    view.add (STRING_CMD_HISTORY_MONTH, false);
+    view.add (STRING_CMD_HISTORY_DAY,   false);
   }
 
   static void insertRowDate (
